[tool.poetry]
name = "tfg-scraper"
version = "0.1.0"
description = ""
authors = ["VoperAD <voperzada@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
playwright = "^1.50.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
